--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "workflow-status",
+  "name": "slack-action-status",
   "version": "1.0.0",
-  "description": "",
+  "description": "Provide GitHub Actions status updates to Slack as jobs progress",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
